--- a/src/style/common.less
+++ b/src/style/common.less
@@ -12,6 +12,7 @@
     height: calc(100vh);
     background-color: @colorL;
     flex: 1;
+    overflow: auto;
   }
   .content{
     position: relative;
