--- a/src/pages/ui/ui.less
+++ b/src/pages/ui/ui.less
@@ -1,6 +1,36 @@
 .card-wrap{
-    margin-bottom: 10px;
-    button{
-        margin-right: 10px;
-    }
+	margin-bottom: 10px;
+	button{
+			margin-right: 10px;
+	}
+}
+
+/*carousel demo*/
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 160px;
+  line-height: 160px;
+  background: #364d79;
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
+
+.slide-wrap .ant-carousel .slick-slide {
+	height: 240px;
+	width: 100%;
+}
+
+/*form demo*/
+
+#components-form-demo-normal-login .login-form {
+  max-width: 300px;
+}
+#components-form-demo-normal-login .login-form-forgot {
+  float: right;
+}
+#components-form-demo-normal-login .login-form-button {
+  width: 100%;
 }
