完成城市业务

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -19,4 +19,12 @@
     position: relative;
     padding: 20px;
   }
+  .content-wrap{
+    background: #fff;
+    border: 1px solid #e8e8e8;
+    margin-top: -2px;
+    .ant-table-wrapper{
+      margin: 0 -1px 0;
+    }
+  }
 }
