--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -7,8 +7,20 @@
     line-height: 60px;
     padding: 0 20px;
     text-align: right;
+    .logo{
+      line-height:60px;
+      text-align: left;
+      font-size: 18px;
+      img{
+        height: 40px;
+        vertical-align: middle;
+      }
+      span{
+        margin-left: 5px;
+      }
+    }
     a{
-      margin-left: 20px;
+      margin-left: 40px;
     }
   }
   .breadcrumb{
@@ -44,9 +56,20 @@
         }
       }
       .weather-detail{
-        margin-left: 15px;
+        margin-left: 5px;
         vertical-align: middle;
       }
     }
+  }
+}
+
+/// common 页面简单头
+.simple-page{
+  .header-top{
+    background: #1890ff;
+    color: @colorM;
+  }
+  a{
+    color: @colorM;
   }
 }
