--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -1,16 +1,18 @@
-.logo{
-  line-height: 90px;
-  padding-left: 20px;
-  background-color: #002140;
-  img{
-    height: 35px;
-    vertical-align: middle;
-  }
-  h1{
-    color: #fff;
-    font-size: 21px;
-    margin: 0 0 0 10px;
-    display: inline-block;
-    vertical-align: middle;
+.nav-left{
+  .logo{
+    line-height: 90px;
+    padding-left: 20px;
+    background-color: #002140;
+    img{
+      height: 35px;
+      vertical-align: middle;
+    }
+    h1{
+      color: #fff;
+      font-size: 21px;
+      margin: 0 0 0 10px;
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 }
